ColinFay published a site update

--- a/golem.html
+++ b/golem.html
@@ -291,7 +291,7 @@ If you ant to learn more about these, here are some resources you can refer to:<
 When you start your project with <code>{golem}</code>, this folder is pre-populated with three <code>.R</code> files: <code>app_server.R</code>, <code>app_ui.R</code> and <code>run_app.R</code>.</p>
 <p>During the process of building your application, all the core functionalities of your app will be stored in the <code>R/</code> directory.
 Note that these files are the “core” functionalities of your application itself, and that other .R files also exists.
-For example, when you will need to deploy your application on RStudio platforms, <code>{golem}</code> will create an <code>app.R</code> at the root of your directory<a href="#fn18" class="footnote-ref" id="fnref18"><sup>18</sup></a>.
+For example, when you will need to deploy your application on RStudio platforms, <code>{golem}</code> will create an <code>app.R</code> at the root of your directory.<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>
 This file should not go into the <code>R/</code> folder, as it is not in the core of the package mechanic.
 The <code>dev/</code> folder also contains <code>.R</code> scripts, and they are inside this folder as they should not live inside the <code>R/</code> folder: they are utilitarian files for development, not core functionalities of your application.</p>
 <p>Inside these <code>.R</code> files, you will find the content of your modules (the one added with <code>golem::add_modules()</code>) and the utilitarian / business logic functions, built with <code>golem::add_utils()</code> and <code>golem::add_fct()</code>.
@@ -402,7 +402,7 @@ run_app &lt;- function(
     golem_opts = list(...)
   )
 }</code></pre>
-<p>The <code>run_app()</code> function is the one that you will use to launch the app<a href="#fn19" class="footnote-ref" id="fnref19"><sup>19</sup></a>.</p>
+<p>The <code>run_app()</code> function is the one that you will use to launch the app.<a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a></p>
 <p>The body of this function is wrapped inside <code>with_golem_options()</code>, which allows you to pass arguments to the <code>run_app()</code> function, which will later be callable with <code>golem::get_golem_options()</code>.
 Some examples of passing arguments include <code>run_app(prod = FALSE)</code> to run a verbose development version or <code>run_app(user = "admin)</code> to bypass authentication during development tests.</p>
 </div>
@@ -520,7 +520,7 @@ Use the <code>app_sys()</code> function if you want to rely on the package path 
 <div id="instappwww" class="section level3">
 <h3><span class="header-section-number">4.2.4</span> <code>inst/app/www/</code></h3>
 <p>The <code>inst/app/www/</code> folder contains all files that are made available <strong>at application run time</strong>.
-Any web application has external files that allow it to run<a href="#fn20" class="footnote-ref" id="fnref20"><sup>20</sup></a>.
+Any web application has external files that allow it to run.<a href="#fn18" class="footnote-ref" id="fnref18"><sup>18</sup></a>
 For example, <code>{shiny}</code> and its <code>fluidPage()</code> function bundles a series of CSS and JavaScript files, notably the <code>Boostrap</code> library, or <code>jQuery</code>.
 These external files enhance your app: CSS for the design part and JavaScript for the interactive part (more or less).
 On top of that, you can add your own files: your own design with CSS or your own JavaScript content (as we will see in the last chapters of this book).
@@ -564,6 +564,14 @@ To know more about documentation and how to build it, here are some external lin
 <div id="ref-R-usethis">
 <p>Wickham, Hadley, and Jennifer Bryan. 2020. <em>Usethis: Automate Package and Project Setup</em>. <a href="https://CRAN.R-project.org/package=usethis">https://CRAN.R-project.org/package=usethis</a>.</p>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="16">
+<li id="fn16"><p><code>{golem}</code> wîll automatically add this file to the <code>.Rbuildignore</code> file.<a href="golem.html#fnref16" class="footnote-back">↩︎</a></p></li>
+<li id="fn17"><p>Very technically speaking, it is the <code>print()</code> from the object outputed by <code>run_app()</code> that launches the app, but this is another story. <a href="golem.html#fnref17" class="footnote-back">↩︎</a></p></li>
+<li id="fn18"><p>Some webpages do not need any external sources, as they do not have any design and are plain HTML, but generally speaking we will not call this format a web application. <a href="golem.html#fnref18" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
 <hr/>
 <footer>
