--- a/planning.html
+++ b/planning.html
@@ -236,7 +236,7 @@ The idea behind this being that repairing an aircraft should be possible for any
 <p>This should be a principle to keep in mind when building application.
 Indeed, large scale Shiny projects can lead to many people working on the code base, for a long period of time.
 Many people means a variety of skills, with some common ground in Shiny development.
-So when choosing how and what to implement, try to make a rule to go for the simplest solution<a href="#fn13" class="footnote-ref" id="fnref13"><sup>13</sup></a>, <em>i.e.</em> the one that any common Shiny Developer would be able to understand and maintain.<br />
+So when choosing how and what to implement, try to make a rule to go for the simplest solution,<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a> <em>i.e.</em> the one that any common Shiny Developer would be able to understand and maintain.<br />
 If you go for an exotic solution or a complex technology, be sure that you are doing it for a good reason: unknown or hard to grasp technology reduce the chance of finding someone that will be able to maintain that piece of code in the future.</p>
 </div>
 </div>
@@ -250,7 +250,7 @@ The choice of tools and organisation is crucial for a successful application.</p
 <h3><span class="header-section-number">2.2.1</span> From the tools point of view</h3>
 <div id="version-control-test-all-the-things" class="section level4">
 <h4><span class="header-section-number">2.2.1.1</span> Version Control &amp; Test all the things</h4>
-<p>To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected<a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a>.
+<p>To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected.<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>
 When you are working on a complex application, chances are that you will be working on it for a significant period of time, meaning that you will write code, modify it, use it, go back to it after a few weeks, change some other things, and probably break things.
 Breaking things is a natural process of software engineering, notably when working on a piece of code during a long period.
 Remember the last chapter where we defined that complex applications are too large to be understood fully?
@@ -315,6 +315,13 @@ But, the person in charge will be there to help make all the pieces to fit toget
 </div>
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="11">
+<li id="fn11"><p>Which might not be the most “elegant” solution, but production code requires pragmatism.<a href="planning.html#fnref11" class="footnote-back">↩︎</a></p></li>
+<li id="fn12"><p>Relying on automatic tooling for monitoring code base is way safer than relying on developers to do manual checks every time they commit code.<a href="planning.html#fnref12" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
 <hr/>
 <footer>
