--- a/css.html
+++ b/css.html
@@ -263,7 +263,7 @@ As you can see if you have created a <code>fluidPage()</code> before, there is a
 <div id="getting-started-with-css" class="section level2">
 <h2><span class="header-section-number">8.2</span> Getting started with CSS</h2>
 <p>CSS is a descriptive language, meaning that you will have to declare the style either on a tag or inside an external file.
-We will see how to integrate CSS inside your Shiny application in the next section, but before that, let’s start with a short introduction to CSS<a href="#fn30" class="footnote-ref" id="fnref30"><sup>30</sup></a>.</p>
+We will see how to integrate CSS inside your Shiny application in the next section, but before that, let’s start with a short introduction to CSS.<a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a></p>
 <div id="about-css-syntax" class="section level3">
 <h3><span class="header-section-number">8.2.1</span> About CSS syntax</h3>
 <p>CSS syntax is composed of two elements: a selector, and a declaration block.
@@ -280,7 +280,7 @@ Note that each key-value pair must end with a semicolon.</p>
 <h3><span class="header-section-number">8.2.2</span> CSS selectors</h3>
 <p>CSS selectors are a wide topic, as there are many combinations of things you might want to select inside an HTML page.</p>
 <p>The first type of selectors are the “standard” ones <code>name</code>, <code>id</code>, or <code>class</code>.
-These refer to the elements composing an HTML tag: for example, with <code>&lt;h2 id = "tileone" class = "standard"&gt;One&lt;/h2&gt;</code>, the name is <code>h2</code>, the id <code>tileone</code>, and the class <code>standard</code><a href="#fn31" class="footnote-ref" id="fnref31"><sup>31</sup></a>.</p>
+These refer to the elements composing an HTML tag: for example, with <code>&lt;h2 id = "tileone" class = "standard"&gt;One&lt;/h2&gt;</code>, the name is <code>h2</code>, the id <code>tileone</code>, and the class <code>standard</code>.<a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a></p>
 <p>To select these three elements in CSS:</p>
 <ul>
 <li>Write the name as-is: <code>h2</code></li>
@@ -401,6 +401,13 @@ Here are some:</p>
 
 
 
+<div class="footnotes">
+<hr />
+<ol start="28">
+<li id="fn28"><p>Of course, this part will not make you an expert CSS programmer, but we hope you will get an idea of how it works, enough to get you started and want to learn more!<a href="css.html#fnref28" class="footnote-back">↩︎</a></p></li>
+<li id="fn29"><p>Note that in HTML, id must be unique, but class must not.<a href="css.html#fnref29" class="footnote-back">↩︎</a></p></li>
+</ol>
+</div>
 <hr/>
 <footer>
 <a href="rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
