ColinFay published a site update

--- a/css.html
+++ b/css.html
@@ -369,20 +369,20 @@ What this tag will contain is these three elements:</p>
 </ul>
 <p>The first two are standard: you do not need to change them, they are necessary to indicate to the HTML page that you are creating a stylesheet, with the type being text/css.
 The <code>href</code> is the one you will need to change: this path points to where your style file is located.</p>
-<p>If you are building your application with <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span>, the good news is that this file creation and linking is transparent: if you call <code>golem::add_css_file("name")</code>, a file will be created at <code>inst/app/www</code>, and this file will be automatically linked inside your UI thanks to the <code>bundle_resouces()</code> function.</p>
+<p>If you are building your application with <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span>, the good news is that this file creation and linking is transparent: if you call <code>golem::add_css_file("name")</code>, a file will be created at <code>inst/app/www</code>, and this file will be automatically linked inside your UI thanks to the <code>bundle_resouces()</code> function.</p>
 </div>
 <div id="using-r-packages" class="section level3">
 <h3><span class="header-section-number">8.3.4</span> Using R packages</h3>
 <p>If you want to use external CSS template, there are several packages that exist that can do implement new custom UI designs for your application.
 Here are some:</p>
 <ul>
-<li><p><code>{resume}</code><span class="citation">(<span class="citeproc-not-found" data-reference-id="R-resume"><strong>???</strong></span>)</span>, provides an implementation of the <a href="https://github.com/BlackrockDigital/startbootstrap-resume">Bootstrap Resume Template</a>.</p></li>
-<li><p><code>{nessy}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-nessy"><strong>???</strong></span>)</span>, a port of <a href="https://github.com/nostalgic-css/NES.css">NES CSS</a>.</p></li>
-<li><p><code>{skeleton}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-skeleton"><strong>???</strong></span>)</span>, <a href="http://getskeleton.com/">Skeleton CSS</a>.</p></li>
-<li><p><code>{shinyMobile}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinyMobile"><strong>???</strong></span>)</span>, shiny API for Framework7 (IOS/android).</p></li>
-<li><p><code>{shinydashboardPlus}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinydashboardPlus"><strong>???</strong></span>)</span>, extensions for shinydashboard.</p></li>
-<li><p><code>{bs4Dash}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-bs4Dash"><strong>???</strong></span>)</span>, Bootstrap 4 shinydashboard using AdminLTE3.</p></li>
-<li><p><code>{fullPage}</code><span class="citation">(<span class="citeproc-not-found" data-reference-id="R-fullPage"><strong>???</strong></span>)</span>, fullPage.js, pagePiling.js and multiScroll.js for shiny.</p></li>
+<li><p><code>{resume}</code><span class="citation">(Fay <a href="#ref-R-resume" role="doc-biblioref">2020</a><a href="#ref-R-resume" role="doc-biblioref">h</a>)</span>, provides an implementation of the <a href="https://github.com/BlackrockDigital/startbootstrap-resume">Bootstrap Resume Template</a>.</p></li>
+<li><p><code>{nessy}</code> <span class="citation">(Fay <a href="#ref-R-nessy" role="doc-biblioref">2020</a><a href="#ref-R-nessy" role="doc-biblioref">g</a>)</span>, a port of <a href="https://github.com/nostalgic-css/NES.css">NES CSS</a>.</p></li>
+<li><p><code>{skeleton}</code> <span class="citation">(Fay <a href="#ref-R-skeleton" role="doc-biblioref">2020</a><a href="#ref-R-skeleton" role="doc-biblioref">i</a>)</span>, <a href="http://getskeleton.com/">Skeleton CSS</a>.</p></li>
+<li><p><code>{shinyMobile}</code> <span class="citation">(Granjon, Perrier, and Rudolf <a href="#ref-R-shinyMobile" role="doc-biblioref">2019</a>)</span>, shiny API for Framework7 (IOS/android).</p></li>
+<li><p><code>{shinydashboardPlus}</code> <span class="citation">(Granjon <a href="#ref-R-shinydashboardPlus" role="doc-biblioref">2019</a><a href="#ref-R-shinydashboardPlus" role="doc-biblioref">b</a>)</span>, extensions for shinydashboard.</p></li>
+<li><p><code>{bs4Dash}</code> <span class="citation">(Granjon <a href="#ref-R-bs4Dash" role="doc-biblioref">2019</a><a href="#ref-R-bs4Dash" role="doc-biblioref">a</a>)</span>, Bootstrap 4 shinydashboard using AdminLTE3.</p></li>
+<li><p><code>{fullPage}</code><span class="citation">(Coene <a href="#ref-R-fullPage" role="doc-biblioref">2020</a>)</span>, fullPage.js, pagePiling.js and multiScroll.js for shiny.</p></li>
 </ul>
 <p>And all the amazing things done at <a href="https://github.com/RinteRface">RinteRface</a>.</p>
 </div>
@@ -401,6 +401,33 @@ Here are some:</p>
 
 
 
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-fullPage">
+<p>Coene, John. 2020. <em>FullPage: Three Families of Functions for Three Different Single Page ’Shiny’ Apps</em>. <a href="https://github.com/RinteRface/fullPage">https://github.com/RinteRface/fullPage</a>.</p>
+</div>
+<div id="ref-R-nessy">
+<p>Fay, Colin. 2020g. <em>Nessy: A ’Nes’ Css for ’Shiny’</em>. <a href="https://github.com/ColinFay/nessy">https://github.com/ColinFay/nessy</a>.</p>
+</div>
+<div id="ref-R-resume">
+<p>Fay, Colin. 2020h. <em>Resume: Bootstrap Resume Template for ’Shiny’</em>.</p>
+</div>
+<div id="ref-R-skeleton">
+<p>Fay, Colin. 2020i. <em>Skeleton: Skeleton Css for Shiny</em>.</p>
+</div>
+<div id="ref-R-bs4Dash">
+<p>Granjon, David. 2019a. <em>Bs4Dash: A ’Bootstrap 4’ Version of ’Shinydashboard’</em>. <a href="https://CRAN.R-project.org/package=bs4Dash">https://CRAN.R-project.org/package=bs4Dash</a>.</p>
+</div>
+<div id="ref-R-shinydashboardPlus">
+<p>Granjon, David. 2019b. <em>ShinydashboardPlus: Add More ’Adminlte2’ Components to ’Shinydashboard’</em>. <a href="https://CRAN.R-project.org/package=shinydashboardPlus">https://CRAN.R-project.org/package=shinydashboardPlus</a>.</p>
+</div>
+<div id="ref-R-shinyMobile">
+<p>Granjon, David, Victor Perrier, and Isabelle Rudolf. 2019. <em>ShinyMobile: Mobile Ready ’Shiny’ Apps with Standalone Capabilities</em>. <a href="https://CRAN.R-project.org/package=shinyMobile">https://CRAN.R-project.org/package=shinyMobile</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+</div>
 <div class="footnotes">
 <hr />
 <ol start="28">
