--- a/deploy-golem.html
+++ b/deploy-golem.html
@@ -204,7 +204,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Once your app is built, you are ready to deploy it!
 In other words, your software is now ready to be used by other users, be it from
 There are two main ways to share your application and make it available to others: by creating a package and making it installable, or by sending it to a remote server.
-We will see in this part how you can do that using <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span>.</p>
+We will see in this part how you can do that using <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span>.</p>
 <div id="before-deployment-check-list" class="section level2">
 <h2><span class="header-section-number">14.1</span> Before deployment Check-list</h2>
 <p>Here is a quick checklist of things to think about once your application is read, and before sending it to production</p>
@@ -306,6 +306,9 @@ Otherwise you might have to add them manually.</p>
 
 <h3>References</h3>
 <div id="refs" class="references">
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
 <div id="ref-R-pkgbuild">
 <p>Wickham, Hadley, and Jim Hester. 2020. <em>Pkgbuild: Find Tools Needed to Build R Packages</em>. <a href="https://CRAN.R-project.org/package=pkgbuild">https://CRAN.R-project.org/package=pkgbuild</a>.</p>
 </div>
