--- a/golem.html
+++ b/golem.html
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="golem" class="section level1">
 <h1><span class="header-section-number">Chapter 4</span> Introduction to <code>{golem}</code></h1>
-<p>The <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> package is a framework for building production-grade Shiny Application.
+<p>The <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> package is a framework for building production-grade Shiny Application.
 Lot of the patterns and methodologies described in this book are linked to <code>{golem}</code> and packages from the <a href="http://golemverse.org/">golemverse</a>.
 Of course, all the advices developed in this book will still be valid even if you are not planning on using <code>{golem}</code>.</p>
 <p>We have quickly introduced <code>{golem}</code> in the last chapter, and we will come back to this package from time to time in the following chapters.
@@ -338,7 +338,7 @@ app_ui &lt;- function(request) {
 <p>This piece of the <code>app_ui.R</code> is designed to received the counterpart of what you put in your server.
 Everything here is to be put after the <code> # List the first level UI elements here </code> line.
 Just as with their server counterparts, the UI side of these elements are the one from the bottom of the file you are creating with <code>golem::add_module()</code>.</p>
-<p>By default, <code>{golem}</code> uses a <code>fluidPage()</code>, which is <code>{shiny}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shiny"><strong>???</strong></span>)</span> most commonly used template.
+<p>By default, <code>{golem}</code> uses a <code>fluidPage()</code>, which is <code>{shiny}</code> <span class="citation">(Chang et al. <a href="#ref-R-shiny" role="doc-biblioref">2020</a>)</span> most commonly used template.
 If ever you want to use <code>navBarPage()</code>, this is where you will define this: replace one with the other, and you will be good to go.
 You can also define any other template page, for example with an <code>htmlTemplate()</code>.
 Keep in mind that removing the <code>fluidPage()</code> here implies that there is no available CSS/JS template to be used anymore, and you will need to be adding your own there.</p>
@@ -463,7 +463,7 @@ production:
   app_prod: yes
 dev:
   golem_wd: !expr here::here()</code></pre>
-<p>It is based on the <code>{config}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-config"><strong>???</strong></span>)</span> format, and allows you to define contexts, with values associated with these specific contexts.
+<p>It is based on the <code>{config}</code> <span class="citation">(Allaire <a href="#ref-R-config" role="doc-biblioref">2018</a>)</span> format, and allows you to define contexts, with values associated with these specific contexts.
 For example, in the default example:</p>
 <ul>
 <li><code>default.golem_name</code>, <code>default.golem_version</code>, <code>default.app_prod</code> are usable across the whole life of your golem app: while developing, and also when in production.</li>
@@ -561,6 +561,15 @@ To know more about documentation and how to build it, here are some external lin
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
+<div id="ref-R-config">
+<p>Allaire, JJ. 2018. <em>Config: Manage Environment Specific Configuration Values</em>. <a href="https://CRAN.R-project.org/package=config">https://CRAN.R-project.org/package=config</a>.</p>
+</div>
+<div id="ref-R-shiny">
+<p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2020. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny">https://CRAN.R-project.org/package=shiny</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
 <div id="ref-R-usethis">
 <p>Wickham, Hadley, and Jennifer Bryan. 2020. <em>Usethis: Automate Package and Project Setup</em>. <a href="https://CRAN.R-project.org/package=usethis">https://CRAN.R-project.org/package=usethis</a>.</p>
 </div>
