--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ It will be published in 2020 in the <a href="https://www.crcpress.com/go/the-r-s
 <h2>Motivation</h2>
 <p>This book will not <strong>get you started with Shiny</strong>, nor <strong>talk about how to deploy into production and scale your app</strong>.
 What we’ll see is <strong>the process of building the app</strong>.
-Why? Lots of blog posts and books talk about starting to use <code>{shiny}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shiny"><strong>???</strong></span>)</span> or putting apps in production.
+Why? Lots of blog posts and books talk about starting to use <code>{shiny}</code> <span class="citation">(Chang et al. <a href="#ref-R-shiny" role="doc-biblioref">2020</a>)</span> or putting apps in production.
 Very few (if any) talk about this grey area between getting started and pushing into production.</p>
 <p>So this is what this book is going to talk about: building Shiny application.
 We’ll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.</p>
@@ -220,7 +220,7 @@ We’ll focus on the process, the workflow, and the tools we use at ThinkR when 
 <h2>Book structure</h2>
 <ul>
 <li><p>Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you are dealing with a large scale application.
-It also introduces the <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> package and more general concept about organising your workflow.
+It also introduces the <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> package and more general concept about organising your workflow.
 This first part will be light on code: you will read more about conceptual ideas and organisation strategy.</p></li>
 <li><p>Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.</p></li>
 <li><p>Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.</p></li>
@@ -366,6 +366,12 @@ Package version:
 
 <h3>References</h3>
 <div id="refs" class="references">
+<div id="ref-R-shiny">
+<p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2020. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny">https://CRAN.R-project.org/package=shiny</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
 <div id="ref-R-bookdown">
 <p>Xie, Yihui. 2020. <em>Bookdown: Authoring Books and Technical Documents with R Markdown</em>. <a href="https://CRAN.R-project.org/package=bookdown">https://CRAN.R-project.org/package=bookdown</a>.</p>
 </div>
