--- a/step-design.html
+++ b/step-design.html
@@ -249,7 +249,7 @@ Here are a non-exhaustive list of places you can look for if you are stuck/looki
 The idea with concept maps is to take a piece of paper (or a digital tool), where you draw all the concepts that come to mind for a specific topic, and all the relationships that link these concepts together.
 Drawing a concept map is a way to organize the knowledge of a specific topic.</p>
 <p>When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various “actors” (the concepts) around our app, with the relationships they have.
-For example, here is a very simple concept map of the <code>{hexmake}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-hexmake"><strong>???</strong></span>)</span> app.</p>
+For example, here is a very simple concept map of the <code>{hexmake}</code> <span class="citation">(Fay <a href="#ref-R-hexmake" role="doc-biblioref">2020</a><a href="#ref-R-hexmake" role="doc-biblioref">f</a>)</span> app.</p>
 <p><img src="img/hexmakemap.png" /></p>
 <blockquote>
 <p>Built with XMind (<a href="https://www.xmind.net" class="uri">https://www.xmind.net</a>)</p>
@@ -344,11 +344,17 @@ That way, even if the process of getting permission to write on the company data
 </div>
 </div>
 </div>
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-hexmake">
+<p>Fay, Colin. 2020f. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
+</div>
+</div>
 <div class="footnotes">
 <hr />
 <ol start="26">
 <li id="fn26"><p>Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution. <a href="step-design.html#fnref26" class="footnote-back">↩︎</a></p></li>
-<li id="fn27"><p>For developing an app that is mobile first, you can have a look at the great <code>{shinyMobile}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinyMobile"><strong>???</strong></span>)</span> package, made by the amazing Rinterface team.<a href="step-design.html#fnref27" class="footnote-back">↩︎</a></p></li>
+<li id="fn27"><p>For developing an app that is mobile first, you can have a look at the great <code>{shinyMobile}</code> <span class="citation">(Granjon, Perrier, and Rudolf <a href="#ref-R-shinyMobile" role="doc-biblioref">2019</a>)</span> package, made by the amazing Rinterface team.<a href="step-design.html#fnref27" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 <hr/>
