--- a/structure.html
+++ b/structure.html
@@ -195,7 +195,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="shiny-app-as-a-package" class="section level2">
 <h2><span class="header-section-number">3.1</span> Shiny App as a Package</h2>
 <p>Building a robust, maintenable and shareable Shiny application will be made possible by building an R package.</p>
-<p>In the next chapter you will be introduced to the <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> package, which is <strong>an opinionated framework for building production-ready Shiny Applications</strong>—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.</p>
+<p>In the next chapter you will be introduced to the <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> package, which is <strong>an opinionated framework for building production-ready Shiny Applications</strong>—this framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.</p>
 <p>But in a world where Shiny Applications are mostly created as a series of files, why bother with a package?</p>
 <div id="what-is-in-a-production-grade-shiny-app" class="section level3">
 <h3><span class="header-section-number">3.1.1</span> What is in a production-grade Shiny App?</h3>
@@ -266,7 +266,7 @@ It can contain installation steps for I.T., internal features use for developers
 <h4><span class="header-section-number">3.1.2.2</span> Testing</h4>
 <p><strong>Nothing should go to production without being tested. Nothing.</strong></p>
 <p>Testing production apps is a wide question and we will come back to this question in another chapter, but let’s talk briefly about why using a package structure helps with testing.</p>
-<p>Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the “Shiny App as a Package” strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like <code>{testthat}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-testthat"><strong>???</strong></span>)</span>.
+<p>Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the “Shiny App as a Package” strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like <code>{testthat}</code> <span class="citation">(Wickham <a href="#ref-R-testthat" role="doc-biblioref">2020</a>)</span>.
 Learning how to use it is not the subject of this chapter, so feel free to refer to the documentation, and see also Chapter 5 of the <a href="https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107">workshop: “Building a package that lasts”</a>.</p>
 <p>We will come back to testing in the “Build Yourself a Safety Net” chapter.</p>
 </div>
@@ -409,7 +409,7 @@ Also, how do you work smoothly in a context where you have to scroll from <code>
 </div>
 <div id="a-bite-sized-code-base" class="section level4">
 <h4><span class="header-section-number">3.2.1.2</span> A bite-sized code base</h4>
-<p>Build your application through multiple smaller application, easier to understand, develop and maintain, using <code>{shiny}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shiny"><strong>???</strong></span>)</span> modules.</p>
+<p>Build your application through multiple smaller application, easier to understand, develop and maintain, using <code>{shiny}</code> <span class="citation">(Chang et al. <a href="#ref-R-shiny" role="doc-biblioref">2020</a>)</span> modules.</p>
 <p>We assume that you know the R saying that <em>“if you copy and paste something more than twice, you should make a function”</em>.
 Then, how do we refactor the partially repetitive piece of code so that it is reusable?</p>
 <p>Yes, you guessed right: using shiny modules.
@@ -518,7 +518,7 @@ As UI and server are functions, you can set parameters that will be used to conf
 
 &lt;button id=&quot;mod_ui_2-validate&quot; type=&quot;button&quot; class=&quot;btn btn-default action-button&quot;&gt;Validate Choice, again&lt;/button&gt;</code></pre>
 <p>The <strong>app_server</strong> side contains a series of <code>callModule(mod_server, unique_id, ...)</code>, also allowing additional parameters, just like any other function.</p>
-<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-tidytuesday201942"><strong>???</strong></span>)</span> Shiny application.</p>
+<p>As a live example, we can have a look at <a href="https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17">mod_dataviz.R</a> from the <code>{tidytuesday201942}</code> <span class="citation">(Fay <a href="#ref-R-tidytuesday201942" role="doc-biblioref">2020</a><a href="#ref-R-tidytuesday201942" role="doc-biblioref">j</a>)</span> Shiny application.</p>
 <p>This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, an a main panel with a button and the plot.
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments.</p>
 <div class="figure">
@@ -715,7 +715,7 @@ For example:</p>
 <p>Similarly to the “stratégie du petit r”, we can create an R6 object, which is passed along inside the modules.
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements.
-All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R"><code>{hexmake}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-hexmake"><strong>???</strong></span>)</span></a> application.</p>
+All this will be explained in details in chapter <a href="optim-caveat.html#optim-caveat">Reactivity anti-patterns</a> of this book, and you can find an example of this pattern inside the <a href="https://github.com/ColinFay/hexmake/blob/master/R/R6.R"><code>{hexmake}</code> <span class="citation">(Fay <a href="#ref-R-hexmake" role="doc-biblioref">2020</a><a href="#ref-R-hexmake" role="doc-biblioref">f</a>)</span></a> application.</p>
 </div>
 </div>
 </div>
@@ -730,7 +730,7 @@ These components are not specific to your core business: you could use them for 
 This has no other use case than your interactive application: it is not meant to be used outside your app, you would not use them in a markdown report for instance.</p></li>
 <li><p>Business logic is the components with the core algorithms and functions that make your application specific to your area of work.
 You can recognize these elements as the ones that can be run outside any interactive context.
-This is the case for specific computation and algorithm, custom plot or <code>geom</code> for <code>{ggplot2}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-ggplot2"><strong>???</strong></span>)</span>, specific calls to a database, etc.</p></li>
+This is the case for specific computation and algorithm, custom plot or <code>geom</code> for <code>{ggplot2}</code> <span class="citation">(Wickham, Chang, et al. <a href="#ref-R-ggplot2" role="doc-biblioref">2020</a>)</span>, specific calls to a database, etc.</p></li>
 </ul>
 <p>These two components do not have to live together.
 They should not live together if you want to keep your sanity when you build an app.</p>
@@ -864,6 +864,27 @@ Your app may not have that many functions, or maybe the functions can all fit in
 But be it one or thousands of files, it is always a good practice to stick to a formalized pattern.</p>
 
 </div>
+</div>
+</div>
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-shiny">
+<p>Chang, Winston, Joe Cheng, JJ Allaire, Yihui Xie, and Jonathan McPherson. 2020. <em>Shiny: Web Application Framework for R</em>. <a href="https://CRAN.R-project.org/package=shiny">https://CRAN.R-project.org/package=shiny</a>.</p>
+</div>
+<div id="ref-R-hexmake">
+<p>Fay, Colin. 2020f. <em>Hexmake: Hex Stickers Maker</em>. <a href="https://github.com/colinfay/hexmake">https://github.com/colinfay/hexmake</a>.</p>
+</div>
+<div id="ref-R-tidytuesday201942">
+<p>Fay, Colin. 2020j. <em>Tidytuesday201942: A Golem App for Tidy Tuesday</em>. <a href="http://www.github.com/ColinFay/tidytuesday201942">http://www.github.com/ColinFay/tidytuesday201942</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+<div id="ref-R-testthat">
+<p>Wickham, Hadley. 2020. <em>Testthat: Unit Testing for R</em>. <a href="https://CRAN.R-project.org/package=testthat">https://CRAN.R-project.org/package=testthat</a>.</p>
+</div>
+<div id="ref-R-ggplot2">
+<p>Wickham, Hadley, Winston Chang, Lionel Henry, Thomas Lin Pedersen, Kohske Takahashi, Claus Wilke, Kara Woo, Hiroaki Yutani, and Dewey Dunnington. 2020. <em>Ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics</em>. <a href="https://CRAN.R-project.org/package=ggplot2">https://CRAN.R-project.org/package=ggplot2</a>.</p>
 </div>
 </div>
 <div class="footnotes">
