--- a/setting-up-for-success-with-golem.html
+++ b/setting-up-for-success-with-golem.html
@@ -192,7 +192,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="setting-up-for-success-with-golem" class="section level1">
 <h1><span class="header-section-number">Chapter 9</span> Setting up for success with <code>{golem}</code></h1>
-<p>Before starting to prototype and build anything, initialize a <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> project!
+<p>Before starting to prototype and build anything, initialize a <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> project!
 This will help you put your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it!</p>
 <p>The general workflow for “prototype and build” is the following: the project manager sets up a <code>{golem}</code> project, where the first steps are filled, the general structure, with Shiny module, is set, and then the project is registered to the version control system.
 Once we have this structure, package and modules combined, we can start prototyping the UI inside the module, work on the CSS and JavaScript elements that might be needed, and prototyping the back-end functionalities inside Rmarkdown files.
@@ -249,7 +249,7 @@ These are the commands you will be using at</p>
 <span id="cb101-7"><a href="setting-up-for-success-with-golem.html#cb101-7"></a>  <span class="dt">author_email =</span> <span class="st">&quot;AUTHOR@MAIL.COM&quot;</span>, <span class="co"># Your Email</span></span>
 <span id="cb101-8"><a href="setting-up-for-success-with-golem.html#cb101-8"></a>  <span class="dt">repo_url =</span> <span class="ot">NULL</span> <span class="co"># The URL of the GitHub Repo (optional) </span></span>
 <span id="cb101-9"><a href="setting-up-for-success-with-golem.html#cb101-9"></a>)   </span></code></pre></div>
-<p>Then, call the <code>golem::set_golem_options()</code> function, it will add information to the <code>golem-config.yml</code> file, and notably set the <code>{here}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-here"><strong>???</strong></span>)</span> package root sentinel.</p>
+<p>Then, call the <code>golem::set_golem_options()</code> function, it will add information to the <code>golem-config.yml</code> file, and notably set the <code>{here}</code> <span class="citation">(Müller <a href="#ref-R-here" role="doc-biblioref">2017</a>)</span> package root sentinel.</p>
 </div>
 <div id="set-common-files" class="section level3">
 <h3><span class="header-section-number">9.2.2</span> Set common Files</h3>
@@ -352,6 +352,15 @@ More on that structure in the last chapter of the book!</p>
 <p>Note that if you are building your application with <code>{golem}</code>, these files will be linked automatically to your application.</p>
 
 </div>
+</div>
+</div>
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+<div id="ref-R-here">
+<p>Müller, Kirill. 2017. <em>Here: A Simpler Way to Find Your Files</em>. <a href="https://CRAN.R-project.org/package=here">https://CRAN.R-project.org/package=here</a>.</p>
 </div>
 </div>
 <hr/>
