--- a/workflow.html
+++ b/workflow.html
@@ -209,7 +209,7 @@ This first step of the process is the one that happens, before actually writing 
 <p>To start on solid ground, you need to build the two (front and back) seperately:</p>
 <ul>
 <li><p>On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions…. everything that does not rely on computation on the back end.
-This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-shinipsum"><strong>???</strong></span>)</span>, and tools like basic CSS, and some <code>{golem}</code> <span class="citation">(<span class="citeproc-not-found" data-reference-id="R-golem"><strong>???</strong></span>)</span> functions.</p></li>
+This “UI first” approach will be made possible for Shiny with notably one package, <code>{shinipsum}</code> <span class="citation">(Fay and Rochette <a href="#ref-R-shinipsum" role="doc-biblioref">2020</a><a href="#ref-R-shinipsum" role="doc-biblioref">b</a>)</span>, and tools like basic CSS, and some <code>{golem}</code> <span class="citation">(Guyader et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> functions.</p></li>
 <li><p>On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work.
 For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.</p></li>
 </ul>
@@ -235,6 +235,15 @@ In this third part, you will work on the core engine of the application, making 
 
 
 
+<h3>References</h3>
+<div id="refs" class="references">
+<div id="ref-R-shinipsum">
+<p>Fay, Colin, and Sebastien Rochette. 2020b. <em>Shinipsum: Lorem-Ipsum-Like Helpers for Fast Shiny Prototyping</em>. <a href="https://github.com/Thinkr-open/shinipsum">https://github.com/Thinkr-open/shinipsum</a>.</p>
+</div>
+<div id="ref-R-golem">
+<p>Guyader, Vincent, Colin Fay, Sébastien Rochette, and Cervan Girard. 2020. <em>Golem: A Framework for Robust Shiny Applications</em>. <a href="https://github.com/ThinkR-open/golem">https://github.com/ThinkR-open/golem</a>.</p>
+</div>
+</div>
 <hr/>
 <footer>
 <a href="rtask.thinkr.fr"><img src="img/logo400_129.png" alt="ThinkR Website"/></a>
